<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.logintest.MainPageActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/登出"
        android:id="@+id/Button03"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Button03"
        android:layout_alignRight="@+id/Button03"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="44dp"
        android:text="@string/button" />

    <Button
        android:id="@+id/btn_toMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button04"
        android:layout_alignStart="@+id/Button04"
        android:layout_below="@+id/Button04"
        android:layout_marginTop="33dp"
        android:text="@string/map" />

    <Button
        android:id="@+id/btn_toUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/upload"
        android:layout_below="@+id/btn_toMap"
        android:layout_toLeftOf="@+id/tv_data"
        android:layout_toStartOf="@+id/tv_data" />

    <Button
        android:id="@+id/btn_mysql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/mysql"
        android:layout_below="@+id/btn_toUpload"
        android:layout_alignLeft="@+id/btn_toUpload"
        android:layout_alignStart="@+id/btn_toUpload" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="TextView"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_mysql"
        android:layout_toEndOf="@+id/tv_data"
        android:layout_toRightOf="@+id/tv_data"
        android:text="@string/download" />

    <Button
        android:id="@+id/btn_toLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_download"
        android:layout_alignRight="@+id/btn_download"
        android:layout_alignTop="@+id/btn_mysql"
        android:text="@string/sqlite" />


</RelativeLayout>